update to Demo gif.

--- a/FlowerCollector/Data/FlowerList_Data.plist
+++ b/FlowerCollector/Data/FlowerList_Data.plist
@@ -12,7 +12,7 @@
 	</dict>
 	<dict>
 		<key>name</key>
-		<string>main_plant</string>
+		<string>main_bouquet</string>
 		<key>title</key>
 		<string>PLANT</string>
 		<key>description</key>
